--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <miglayout-swing.version>5.2</miglayout-swing.version>
         <commons-io.version>2.8.0</commons-io.version>
         <gson.version>2.8.6</gson.version>
+        <slf4j-api.version>2.0.0-alpha1</slf4j-api.version>
     </properties>
 
     <dependencies>
@@ -43,10 +44,24 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.miglayout</groupId>
             <artifactId>miglayout-swing</artifactId>
             <version>${miglayout-swing.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
