--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,8 @@
         <miglayout-swing.version>5.2</miglayout-swing.version>
         <commons-io.version>2.8.0</commons-io.version>
         <gson.version>2.8.6</gson.version>
-        <slf4j-api.version>2.0.0-alpha1</slf4j-api.version>
+        <slf4j.version>2.0.0-alpha1</slf4j.version>
+        <log4j-core.version>2.14.0</log4j-core.version>
     </properties>
 
     <dependencies>
@@ -44,11 +45,27 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j-core.version}</version>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-api.version}</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
