--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <gson.version>2.8.6</gson.version>
         <slf4j.version>2.0.0-alpha1</slf4j.version>
         <log4j-core.version>2.14.0</log4j-core.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
     </properties>
 
     <dependencies>
@@ -78,7 +79,7 @@
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
-            <version>1.9.4</version>
+            <version>${commons-beanutils.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
