disable for the moment alignment of frame on the right side of screen & let it on center. (Windows issue, displayed before bottom bar)

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
             <roles>
                 <role>Developer</role>
             </roles>
+            <organization>Rainy</organization>
         </developer>
     </developers>
 
